--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="stylesheet" href="../build/static/css/main.b7be3ecf.chunk.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -42,6 +43,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script src="../build/static/js/1.64a204dd.chunk.js"></script>
+  <script src="../build/static/js/main.51e15a60.chunk.js"></script>
+  <script src="../build/static/js/runtime~main.229c360f.js"></script>
 </body>
 
 </html>
